# cosine-similarity

./: .gitignore  Cargo.toml  Justfile  README.md  cspell.config.yaml  flake.nix  package.json  pnpm-lock.yaml
package/: README.md  package.json
playground/: package.json  vitest.config.ts
playground/test/: index.bench.ts  index.test.ts
src/: lib.rs
