# cargo-features = ["edition2024"]

[package]
name = "moeru-ai-cosine-similarity"
version = "0.1.0"
authors = ["Moeru AI"]
# edition = "2024"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
js-sys = { version = "0.3", default-features = false }
micromath = "2.1"
no-panics-whatsoever = "0.1"
wasm-bindgen = { version = "0.2", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
